Created discover service, api gateway and connection service implement all the services and.

--- a/posts-service/src/main/resources/application.properties
+++ b/posts-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=posts-service
 
-#server.servlet.context-path=
+server.servlet.context-path=/posts
 server.port=9010
 
 #DB configuration
@@ -13,4 +13,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.format_sql=true
 
 #eureka configuration
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
