--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=user-service
 
 jwt.secretKey=hghjvvc678ytytrd9867rtiyohjljkvhciouygfviou87y6h7y6trf
 
-#server.servlet.context-path=
+server.servlet.context-path=/users
 server.port=9020
 
 #DB configuration
@@ -15,4 +15,4 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.properties.hibernate.format_sql=true
 
 #eureka configuration
-#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
