--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring.application.name: api-gateway
 
 server.port: 8080
 
+jwt.secretKey: hghjvvc678ytytrd9867rtiyohjljkvhciouygfviou87y6h7y6trf
+
 eureka.client.service-url.defaultZone: http://localhost:8761/eureka
 
 spring:
@@ -21,6 +23,7 @@ spring:
             - Path=/api/v1/posts/**
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
 
         - id: connection-service
           uri: lb://CONNECTION-SERVICE
@@ -28,3 +31,4 @@ spring:
             - Path=/api/v1/connections/**
           filters:
             - StripPrefix=2
+            - name: AuthenticationFilter
