--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.port=9020
 spring.datasource.url=jdbc:postgresql://localhost:5432/userDB
 spring.datasource.username=postgres
 spring.datasource.password=Vinay123
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
