--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=notification-service
+
+server.servlet.context-path=/notifications
+server.port=9040
+
+#DB configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/notificationDB
+spring.datasource.username=postgres
+spring.datasource.password=Vinay123
+spring.jpa.hibernate.ddl-auto=create-drop
+
+#eureka configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
